--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "pwa-app",
+  "homepage": "https://quangmv-rikkeisoft.github.io/demo-pwa-app/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,6 +14,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
+    "gh-pages": "^6.0.0",
     "mobile-device-detect": "^0.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -37,7 +39,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
